# braille-drawer

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: braille_canvas.cpp.2F402DB864FBC636.idx  braille_canvas.h.B33DAE8777CEC2EE.idx  braille_dot.cpp.61B75346CF6AD530.idx  braille_dot.h.F8B020D6338C9B71.idx  braille_text_box.cpp.0FDED7DE8E277AB7.idx  braille_text_box.h.0FE766D29DF0D779.idx  braille_view.cpp.E4444DE0ED830FB3.idx  braille_view.h.521B32D64D78D2B9.idx  file.cpp.9C6EF9A8F432219B.idx  file.h.806374F643842FFB.idx  image_menu.cpp.532E3B0D8E83DFA6.idx  image_menu.h.AB70FBCD0E2CBFA0.idx  main.cpp.99A000CA4F96A0DA.idx  mainwindow.cpp.39892217B857F3EC.idx  mainwindow.h.88BFD6B242EB4EA6.idx  saving.cpp.5B516D1D978723CC.idx  saving.h.BF43C129B10CB04D.idx  state.cpp.5F4370B7C070F238.idx  state.h.A4C52282A17FEEC0.idx  test_state_tracker.cpp.1C7A62C0904C696E.idx  tools.cpp.E267F996F4E711FF.idx  tools.h.02FE6F5F6CB845F0.idx
include/: braille_canvas.h  braille_dot.h  braille_text_box.h  braille_view.h  file.h  image_menu.h  mainwindow.h  saving.h  state.h  tools.h
src/: braille_canvas.cpp  braille_dot.cpp  braille_text_box.cpp  braille_view.cpp  file.cpp  image_menu.cpp  mainwindow.cpp  saving.cpp  state.cpp  tools.cpp
tests/: test_state_tracker.cpp
ui/: gen.py  mainwindow.ui  resize.ui
